# ros2_swervebot_sim

./: LICENSE  README.md
src/base/: CMakeLists.txt  package.xml
src/base/config/: controller_config.yaml
src/base/launch/: robot_bringup.launch.py  test.launch.py
src/base/robot_desc/: gz_ros2_control.xacro  inertial_macros.xacro  materials.xacro  swervebot.xacro  swervebot_assemble.xacro  swervebot_car.xacro  swervebot_wheel.xacro
src/base/rviz2/: main_view.rviz
src/base/src/: swervebot_sim_base.cpp  test_diffswerve_sim.cpp
src/kinematics/: CMakeLists.txt  package.xml
src/kinematics/include/ros2_swervebot_sim_kinematics/: common.hpp  differential_converter.hpp  kinematics_worker.hpp
src/kinematics/src/: differential_converter.cpp  kinematics_worker.cpp
src/msgs/: CMakeLists.txt  package.xml
src/msgs/msg/: DifferentialSwerve.msg  Wheel.msg
